--- a/Unknowns/src/main/webapp/WEB-INF/views/createAccount.html
+++ b/Unknowns/src/main/webapp/WEB-INF/views/createAccount.html
@@ -2,14 +2,18 @@
 <html>
 
 <head>
-    <meta charset="utf-8"/>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Sign in</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="b2.css" />
 </head>
 
-<body style="background-color: #008080">
-<div class="screen" style="height:100%; width:100%; padding-top: 235px;">
+<body>
+<div class="screen">
     <div id="signInDiv">
 
         <div class="signin">
@@ -40,7 +44,7 @@
                     </div>
                     <div class="warning" style="font-size:14px; line-height: 0px;">
                     </div>
-                    <button type="submit">
+                    <button style="position: relative; left: 150px;" class="btn btn-dark"  type="submit">
                         Submit
                     </button>
                 </form>
@@ -51,51 +55,3 @@
 </body>
 
 </html>
-<style>
-    #signInDiv {
-        background-image: url(win95.png);
-        background-repeat: no-repeat;
-        background-size: 700px 500px;
-        background-position: center;
-    }
-
-    .signin {
-        font-family: Arial;
-        height: 451px;
-        width: 460px;
-        padding: 48px 40px 36px;
-        margin: auto;
-    }
-
-    p {
-        font-family: 'Courier New', Courier, monospace;
-        font-weight: bolder !important;
-        font-weight: 400;
-        font-size: 28px;
-        color: #202124;
-        text-align: center;
-    }
-
-    html {
-        font-family: 'Courier New', Courier, monospace;
-        font-weight: bolder !important;
-        overflow: hidden;
-    }
-
-    input {
-        width: 268px !important;
-        height: 36px !important;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        padding: 13px 15px;
-        border: 1px solid #008080;
-    }
-
-    button {
-        color: black;
-        font-size: 18px;
-        position: relative;
-        left: 190px;
-    }
-</style>
