--- a/Unknowns/src/main/resources/static/css/style.css
+++ b/Unknowns/src/main/resources/static/css/style.css
@@ -1,6 +1,5 @@
-<style>
 body {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://i.ibb.co/0XhyTSs/skyline-bg.png) !important;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(assets/images/skyline-bg.png) !important;
   background-repeat: no-repeat;
   background-position: top;
   height: 90%;
@@ -359,4 +358,3 @@ input {
   position: relative;
   left: 80px;
 }
-</style>
