--- a/Unknowns/src/main/webapp/WEB-INF/views/style.css
+++ b/Unknowns/src/main/webapp/WEB-INF/views/style.css
@@ -1,3 +1,4 @@
+<style>
 body {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(assets/images/skyline-bg.png) !important;
   background-repeat: no-repeat;
@@ -358,3 +359,4 @@ input {
   position: relative;
   left: 80px;
 }
+<style>
