--- a/Unknowns/src/main/webapp/WEB-INF/views/blue.css
+++ b/Unknowns/src/main/webapp/WEB-INF/views/blue.css
@@ -1,3 +1,4 @@
+<style>
 @charset "UTF-8";
 /* RESET */
 
@@ -906,3 +907,4 @@ li a, .dropbtn {
 	padding: 14px 16px;
 	text-decoration: none;
   }
+  </style>
