--- a/Unknowns/src/main/webapp/WEB-INF/views/print.css
+++ b/Unknowns/src/main/webapp/WEB-INF/views/print.css
@@ -1,3 +1,4 @@
+<style>
 body {
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 	background-color: white;
@@ -285,3 +286,4 @@ big {
 .works {
 	display:none;
 }
+  </style>
